--- a/lecture_1/package.json
+++ b/lecture_1/package.json
@@ -8,7 +8,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "learn": "node index2.js"
   },
   "dependencies": {
     "dotenv": "^16.4.7",
