--- a/lecture_1/package.json
+++ b/lecture_1/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "dotenv": "^16.4.7",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "url": "^0.11.4"
   }
 }
