--- a/lecture_1/package.json
+++ b/lecture_1/package.json
@@ -9,7 +9,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "learn": "node index2.js"
+    "learn": "node index2.js",
+    "express": "node express.js",
+    "rest": "node rest.js"
   },
   "dependencies": {
     "dotenv": "^16.4.7",
