--- a/lecture_1/package.json
+++ b/lecture_1/package.json
@@ -11,12 +11,14 @@
     "start": "nodemon index.js",
     "learn": "nodemon index2.js",
     "express": "nodemon express.js",
-    "rest": "nodemon rest.js"
+    "rest": "nodemon rest.js",
+    "url": "nodemon Url_Short.js"
   },
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "mongoose": "^8.18.0",
+    "nanoid": "^5.1.5",
     "nodemon": "^3.1.10",
     "url": "^0.11.4"
   }
