--- a/lecture_1/package.json
+++ b/lecture_1/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "dotenv": "^16.4.7",
+    "ejs": "^3.1.10",
     "express": "^5.1.0",
     "mongoose": "^8.18.0",
     "nanoid": "^5.1.5",
