--- a/lecture_1/package.json
+++ b/lecture_1/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^8.18.0",
     "nanoid": "^5.1.5",
     "nodemon": "^3.1.10",
-    "url": "^0.11.4"
+    "url": "^0.11.4",
+    "uuid": "^13.0.0"
   }
 }
