--- a/lecture_1/package.json
+++ b/lecture_1/package.json
@@ -15,6 +15,7 @@
     "url": "nodemon Url_Short.js"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
