--- a/projecct_1/.env.sample
+++ b/projecct_1/.env.sample
@@ -1,2 +1,11 @@
 PORT=
 MONGODB_URI=mongodb+srv://parthib:<password>@videotube.nqkw1ge.mongodb.net
+
+# basically we need to put here the original hosted url name..
+CORS_ORIGIN=*
+
+// authentication related
+ACCESS_TOKEN_SECRET=<me-she-access>
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=<me-she-refresh>
+REFRESH_TOKEN_EXPIRY=7d
