--- a/projecct_1/.env.sample
+++ b/projecct_1/.env.sample
@@ -9,3 +9,8 @@ ACCESS_TOKEN_SECRET=<me-she-access>
 ACCESS_TOKEN_EXPIRY=1d
 REFRESH_TOKEN_SECRET=<me-she-refresh>
 REFRESH_TOKEN_EXPIRY=7d
+
+// cloudinary related
+CLOUDINARY_CLOUD_NAME=<cloud-name>
+CLOUDINARY_API_KEY=<api-key>
+CLOUDINARY_API_SECRET=<api-secret>
